--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ ollama>=0.1.0
 pyyaml>=6.0
 requests>=2.26.0
 rich>=10.0.0
+aiofiles>=23.1.0
 
 # Security dependencies
 defusedxml>=0.7.1  # SECURITY: Safe XML parsing to prevent XXE attacks
