--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ ollama>=0.1.0
 pyyaml>=6.0
 requests>=2.26.0
 rich>=10.0.0
+click>=8.0.0
+yaspin>=3.0.0
 
 # Security dependencies
 defusedxml>=0.7.1  # SECURITY: Safe XML parsing to prevent XXE attacks
@@ -16,6 +18,19 @@ defusedxml>=0.7.1  # SECURITY: Safe XML parsing to prevent XXE attacks
 dnspython>=2.1.0
 python-nmap>=0.7.1
 wfuzz>=3.1.0
+
+# Dark web OSINT / Robin integration
+PySocks>=1.7.1
+streamlit>=1.32.0
+langchain-core>=0.3.0
+langchain-openai>=0.2.0
+langchain-ollama>=0.1.0
+langchain-anthropic>=0.1.0
+langchain-google-genai>=0.1.0
+langchain-community>=0.2.0
+openai>=1.30.0
+anthropic>=0.31.0
+google-generativeai>=0.5.0
 
 # Development tools
 black>=21.5b2
