--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 aiohttp>=3.8.0
 asyncio>=3.4.3
+aiofiles>=0.8.0
 beautifulsoup4>=4.9.3
 jinja2>=3.0.0
 markdown>=3.3.0
@@ -17,7 +18,7 @@ defusedxml>=0.7.1  # SECURITY: Safe XML parsing to prevent XXE attacks
 # Security tools
 dnspython>=2.1.0
 python-nmap>=0.7.1
-wfuzz>=3.1.0
+
 
 # Dark web OSINT / Robin integration
 PySocks>=1.7.1
